<resources>
    <string name="app_name">m8pruebaextra</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gossos">Gossos</string>
    <string name="mascotes">Mascotes</string>
    <string name="gats">Gats</string>
    <string name="events">Events</string>
    <string name="nomEvent">Event</string>
    <string name="localitat">Localitat</string>
    <string name="dataInici">Data de inic</string>
    <string name="dataFi">Data Fi</string>
    <string name="enviar">Enviar</string>
    <string name="dia">Dia</string>
    <string name="mes">Mes</string>
    <string name="any">Any</string>
    <string name="prote">11Pets</string>
    <string name="login">Entrar</string>
    <string name="register">Registrar</string>
    <string name="user">Usuari</string>
    <string name="password">Contrasenya</string>
    <string name="confirmpassword">Confirmar contrasenya</string>
    <string name="info">La nostra història Tot va començar amb el nostre amor per la nostra família i les nostres mascotes. I si una cosa ens ha ensenyat la nostra gran família, és que els membres de la família sempre es cuiden els uns als altres. Creiem que les nostres mascotes són una part tan important de la família com qualsevol altra persona i que mereixen la mateixa cura. Els requisits per fer un seguiment correcte de les necessitats diàries i l\'atenció mèdica de les teves mascotes poden convertir-se en un desafiament. I nosaltres en sabem, en tenim 11. A causa d\'això, vam decidir que era hora de facilitar-nos les coses a nosaltres i als nostres peluts companys, i vam crear 11pets. Volíem crear la millor aplicació de cura de mascotes que existís, per això no només analitzem la nostra experiència, sinó que escoltem l\'experiència combinada, els consells, el coneixement i els comentaris d\'entrenadors qualificats, veterinaris professionals, i altres amants de les mascotes, per tal de crear funcionalitats que es dirigissin als amos de mascotes i les seves necessitats de cura de mascotes. Després de 500.000 descàrregues i més de 100 adaptacions a la funcionalitat, ens complau dir que hem creat la millor aplicació mòbil i fàcil dusar, per a la cura de mascotes.</string>
</resources>